--- a/Imagenes/desktop.ini
+++ b/Imagenes/desktop.ini
@@ -1,2 +1,7 @@
 [LocalizedFileNames]
 Captura de pantalla 2025-12-21 230640.png=@Captura de pantalla 2025-12-21 230640.png,0
+Captura de pantalla 2025-12-23 151311.png=@Captura de pantalla 2025-12-23 151311.png,0
+Captura de pantalla 2025-12-23 151345.png=@Captura de pantalla 2025-12-23 151345.png,0
+Captura de pantalla 2025-12-23 154913.png=@Captura de pantalla 2025-12-23 154913.png,0
+Captura de pantalla 2025-12-23 170959.png=@Captura de pantalla 2025-12-23 170959.png,0
+Captura de pantalla 2025-12-23 171019.png=@Captura de pantalla 2025-12-23 171019.png,0
